--- a/src/components/detailComponents/DetailScreen.css
+++ b/src/components/detailComponents/DetailScreen.css
@@ -12,24 +12,39 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    height: 400px;
     margin: 30px;
     box-shadow: 0 5px 7px gray;
     border-radius: 2px;
     font-family: Inter;
-    font-size: 20pt;
 }
 
 .instructions {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    height: 400px;
+    width: 350px;
     margin: 30px;
     box-shadow: 0 5px 7px gray;
     border-radius: 2px;
     font-family: Inter;
+}
+
+.ing {
+    margin: 5px;
     font-size: 20pt;
+}
+
+.ing-list {
+    
+}
+
+.instr {
+    margin: 10px;
+    font-size: 20pt;
+}
+
+.instr-p {
+    font-size: 10pt;
+    margin: 20px;
+    margin-top: 0px;
 }
