--- a/src/components/detailComponents/DetailScreen.css
+++ b/src/components/detailComponents/DetailScreen.css
@@ -11,11 +11,12 @@
 .ingredients {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin: 30px;
     box-shadow: 0 5px 7px gray;
     border-radius: 2px;
     font-family: Inter;
+    width: 250px;
+    white-space: none;
 }
 
 .instructions {
@@ -32,10 +33,23 @@
 .ing {
     margin: 5px;
     font-size: 20pt;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.ing-p {
+    font-size: 10pt;
 }
 
 .ing-list {
-    
+    list-style: none;
+}
+
+.ing-list > li {
+    font-size: 10pt;
+    margin-bottom: 7px;
+    margin-left: 20px;
 }
 
 .instr {
@@ -47,4 +61,12 @@
     font-size: 10pt;
     margin: 20px;
     margin-top: 0px;
+}
+
+.rec {
+    margin: 20px;
+}
+
+.rec > p {
+    margin-bottom: 7px;
 }
