--- a/src/components/detailComponents/DetailScreen.css
+++ b/src/components/detailComponents/DetailScreen.css
@@ -16,7 +16,7 @@
     border-radius: 2px;
     font-family: Inter;
     width: 250px;
-    white-space: none;
+    height: fit-content;
 }
 
 .instructions {
@@ -28,6 +28,7 @@
     box-shadow: 0 5px 7px gray;
     border-radius: 2px;
     font-family: Inter;
+    height: fit-content;
 }
 
 .ing {
@@ -40,10 +41,12 @@
 
 .ing-p {
     font-size: 10pt;
+    white-space: pre-wrap;
 }
 
 .ing-list {
     list-style: none;
+    margin-bottom: 15px;
 }
 
 .ing-list > li {
